--- a/OverTheRainbow/OverTheRainbow/Screens/WritingLetter/WritingLetter.storyboard
+++ b/OverTheRainbow/OverTheRainbow/Screens/WritingLetter/WritingLetter.storyboard
@@ -22,6 +22,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="편지 상세뷰 버튼"/>
                                 <connections>
+                                    <action selector="callLetter:" destination="4nk-XX-fa4" eventType="touchUpInside" id="2be-Dk-IxA"/>
                                     <segue destination="uHt-fA-QB2" kind="show" id="FeV-qr-T0h"/>
                                 </connections>
                             </button>
@@ -289,10 +290,10 @@
                                 <buttonConfiguration key="configuration" style="plain"/>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qhZ-uV-tDR">
-                                <rect key="frame" x="20" y="355" width="350" height="59"/>
+                                <rect key="frame" x="20" y="365" width="350" height="49"/>
                                 <color key="backgroundColor" red="0.95934301609999995" green="0.95799666640000003" blue="0.91491341589999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="59" id="3Gc-ij-lre"/>
+                                    <constraint firstAttribute="height" constant="49" id="E4P-jx-Fkk"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="24"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -315,9 +316,8 @@
                                     <constraint firstAttribute="height" constant="255" id="JBL-ZS-oo1"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4cU-aA-Rek">
-                                <rect key="frame" x="20" y="80" width="350" height="255"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4cU-aA-Rek">
+                                <rect key="frame" x="20" y="81" width="350" height="264"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title=""/>
                             </button>
@@ -330,21 +330,30 @@
                             <constraint firstItem="jfN-tU-rFA" firstAttribute="top" secondItem="DRp-gq-X4V" secondAttribute="top" constant="24" id="71t-lh-NVp"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="trailing" secondItem="oCd-h1-seR" secondAttribute="trailing" id="Cu5-X4-vDF"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="trailing" secondItem="qhZ-uV-tDR" secondAttribute="trailing" id="HO4-TT-X6u"/>
+                            <constraint firstItem="4cU-aA-Rek" firstAttribute="top" secondItem="DRp-gq-X4V" secondAttribute="top" constant="25" id="TEa-7H-deB"/>
                             <constraint firstItem="DRp-gq-X4V" firstAttribute="trailing" secondItem="TiR-2L-hiZ" secondAttribute="trailing" constant="20" id="XlC-rA-sB0"/>
                             <constraint firstAttribute="bottom" secondItem="TiR-2L-hiZ" secondAttribute="bottom" constant="101" id="Xsv-jj-MyA"/>
+                            <constraint firstItem="4cU-aA-Rek" firstAttribute="leading" secondItem="DRp-gq-X4V" secondAttribute="leading" constant="20" id="cj3-7n-qko"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="mFv-Er-Wds" secondAttribute="trailing" id="e5X-6k-1pN"/>
                             <constraint firstItem="mFv-Er-Wds" firstAttribute="top" secondItem="TiR-2L-hiZ" secondAttribute="bottom" constant="22" id="f95-Q2-qZP"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="leading" secondItem="qFH-NE-R3g" secondAttribute="leadingMargin" constant="4" id="gKe-5o-9Nj"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="leading" secondItem="qhZ-uV-tDR" secondAttribute="leading" id="gLX-yY-Dkl"/>
                             <constraint firstItem="mFv-Er-Wds" firstAttribute="leading" secondItem="DRp-gq-X4V" secondAttribute="leading" constant="321" id="hk5-X3-4Uc"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="leading" secondItem="jfN-tU-rFA" secondAttribute="leading" constant="4" id="jsj-X3-MLN"/>
+                            <constraint firstItem="DRp-gq-X4V" firstAttribute="trailing" secondItem="4cU-aA-Rek" secondAttribute="trailing" constant="20" id="leJ-qx-0ic"/>
+                            <constraint firstItem="qhZ-uV-tDR" firstAttribute="top" secondItem="4cU-aA-Rek" secondAttribute="bottom" constant="20" id="qOz-7k-zYk"/>
                             <constraint firstItem="jfN-tU-rFA" firstAttribute="top" secondItem="oCd-h1-seR" secondAttribute="top" id="sRa-O0-49y"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="top" secondItem="qhZ-uV-tDR" secondAttribute="bottom" constant="21" id="wwY-4z-HR6"/>
                             <constraint firstItem="TiR-2L-hiZ" firstAttribute="trailing" secondItem="jfN-tU-rFA" secondAttribute="trailing" constant="4" id="ydF-HC-pcu"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="AS4-hE-dq2">
-                        <barButtonItem key="rightBarButtonItem" title="완료" id="Cpq-nQ-Qt0"/>
+                        <barButtonItem key="rightBarButtonItem" title="완료" id="Cpq-nQ-Qt0">
+                            <color key="tintColor" red="0.28621885180000001" green="0.25491994620000002" blue="0.25490090250000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <connections>
+                                <action selector="doneeditingLetter:" destination="rjd-Mf-sdI" id="5kQ-h8-fRY"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="btnChangeImage" destination="4cU-aA-Rek" id="z6a-2e-zwn"/>
