[Feat] 저장 완료, 임시저장한 편지 삭제 기능 완료, 기타 추가 기능들 구현

--- a/OverTheRainbow/OverTheRainbow/Screens/WritingLetter/WritingLetter.storyboard
+++ b/OverTheRainbow/OverTheRainbow/Screens/WritingLetter/WritingLetter.storyboard
@@ -157,7 +157,7 @@
         <!--Navigation Controller-->
         <scene sceneID="Ibw-9C-0xw">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WV9-tH-4pG" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="navigationController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="WV9-tH-4pG" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="48s-7R-nhx">
                         <rect key="frame" x="0.0" y="44" width="390" height="44"/>
@@ -234,7 +234,7 @@
                         <barButtonItem key="rightBarButtonItem" title="Item" image="pencil.circle" catalog="system" id="AdJ-Gz-91X">
                             <color key="tintColor" red="0.28621885180000001" green="0.25491994620000002" blue="0.25490090250000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <connections>
-                                <segue destination="WIv-hS-0CB" kind="presentation" id="H0w-Pg-3cG"/>
+                                <segue destination="WIv-hS-0CB" kind="presentation" identifier="editingLetter" id="hX8-FE-A84"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -272,7 +272,7 @@
         <!--Editing Letter View Controller-->
         <scene sceneID="Ri8-qa-iTP">
             <objects>
-                <viewController id="rjd-Mf-sdI" customClass="EditingLetterViewController" customModule="OverTheRainbow" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="editingLetter" useStoryboardIdentifierAsRestorationIdentifier="YES" id="rjd-Mf-sdI" customClass="EditingLetterViewController" customModule="OverTheRainbow" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="qFH-NE-R3g">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="790"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -374,7 +374,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="rjd-Mf-sdI" kind="relationship" relationship="rootViewController" id="8J7-K6-N01"/>
+                        <segue destination="rjd-Mf-sdI" kind="relationship" relationship="rootViewController" id="jvV-i2-Sg9"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hIZ-VW-WKb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -383,9 +383,9 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="FeV-qr-T0h"/>
+        <segue reference="sh4-g9-v7w"/>
     </inferredMetricsTieBreakers>
-    <color key="tintColor" red="0.28621885180000001" green="0.25491994620000002" blue="0.25490090250000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+    <color key="tintColor" red="0.29332616929999999" green="0.25663542750000001" blue="0.25579723720000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
     <resources>
         <image name="pencil.circle" catalog="system" width="128" height="121"/>
         <image name="square.and.pencil" catalog="system" width="128" height="115"/>
