[Feat] Done Updating Letter

--- a/OverTheRainbow/OverTheRainbow/Screens/WritingLetter/WritingLetter.storyboard
+++ b/OverTheRainbow/OverTheRainbow/Screens/WritingLetter/WritingLetter.storyboard
@@ -383,7 +383,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="sh4-g9-v7w"/>
+        <segue reference="FeV-qr-T0h"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.29332616929999999" green="0.25663542750000001" blue="0.25579723720000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
     <resources>
