--- a/OverTheRainbow/OverTheRainbow/Screens/flowerView/FlowerView.storyboard
+++ b/OverTheRainbow/OverTheRainbow/Screens/flowerView/FlowerView.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--꽃뷰-->
+        <!--FlowerView-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController storyboardIdentifier="FlowerView" id="Y6W-OH-hqX" customClass="FlowerViewController" customModule="OverTheRainbow" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FlowerView" title="FlowerView" id="Y6W-OH-hqX" customClass="FlowerViewController" customModule="OverTheRainbow" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -207,7 +207,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="flower4" width="800" height="800"/>
+        <image name="flower4" width="315" height="630"/>
         <namedColor name="backgroundColor">
             <color red="0.95686274509803926" green="0.95686274509803926" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
