[Fix] UI 수정 (천국뷰 nav bar, 설정뷰 생일)

--- a/OverTheRainbow/OverTheRainbow/Screens/SettingView/SettingView.storyboard
+++ b/OverTheRainbow/OverTheRainbow/Screens/SettingView/SettingView.storyboard
@@ -198,7 +198,7 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="101" translatesAutoresizingMaskIntoConstraints="NO" id="ubZ-LZ-3Oo" userLabel="Age">
                                         <rect key="frame" x="0.0" y="132" width="266.5" height="51"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="나이" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sUn-QN-Wu5">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="생일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sUn-QN-Wu5">
                                                 <rect key="frame" x="0.0" y="0.0" width="29.5" height="51"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" name="settingCategoryTextColor"/>
